output/illustrative_examples/figure3_CF/explanation_from_other_techniques/explanation_PEM_3.12.txt
line 6
    num=(num ^^(1<<i))
              ^
SyntaxError: invalid syntax